--- a/DOM/1_dom.html
+++ b/DOM/1_dom.html
@@ -13,7 +13,12 @@
 </head>
 <body class="bg-black">
     <div >
-        <h1  id="title" class="heading">DOM learning on Chai aur code <span style="display: none;">test text</span></h1>
+        <h1  id="title" class="heading">DOM learning on Chai aur code
+             <span style="display: none;">test text</span></h1>
+             <!-- In DOM when we use innerText then it will show only visible text
+            but when we use textContent then it will also show us visible text with not viisble text
+            when we use innerHTML then it will show us html element also 
+             -->
         <h2>Lorem ipsum dolor sit.</h2>
         <h2>Lorem ipsum dolor sit.</h2>
         <h2>Lorem ipsum dolor sit.</h2>
