--- a/DOM/2_dom.html
+++ b/DOM/2_dom.html
@@ -16,24 +16,24 @@
     </div>
 </body>
 <script>
-    const parent = document.querySelector('.parent')
-    // console.log(parent);
-    // console.log(parent.children);
-    // console.log(parent.children[1].innerHTML);
+   const parent= document.querySelector('.parent')
+//    console.log(parent);   
+//    console.log(parent.children);
+//    console.log(parent.children[1].innerText);
 
-    // for (let i = 0; i < parent.children.length; i++) {
-    //      console.log(parent.children[i].innerHTML);
-        
-    // }
-    parent.children[1].style.color = "orange"
-    // console.log(parent.firstElementChild);
-    // console.log(parent.lastElementChild);
+   for(let i=0;i < parent.children.length;i++){
+    console.log(parent.children[i].innerText);
+   }
+   parent.children[1].style.color="orange";
+   console.log(parent.firstElementChild);
+   console.log(parent.lastElementChild);
 
-    const dayOne = document.querySelector('.day')
-    // console.log(dayOne);
-    // console.log(dayOne.parentElement);
-    // console.log(dayOne.nextElementSibling);
+   const dayOne=document.querySelector('.day')
 
-    console.log("NODES: ", parent.childNodes);
+   console.log(dayOne);
+   console.log(dayOne.parentElement);
+   console.log(dayOne.nextElementSibling);
+
+   console.log("Nodes: ", parent.childNodes);
 </script>
 </html>
